--- a/facebook.html
+++ b/facebook.html
@@ -71,15 +71,15 @@
                   </button>
                 </div>
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default navbar-btn">
+                  <button type="button" class="btn btn-default navbar-btn fb-notifications">
                     <span class="glyphicon glyphicon-user"></span>
                     <span class="badge">5</span>
                   </button>
-                  <button type="button" class="btn btn-default navbar-btn">
+                  <button type="button" class="btn btn-default navbar-btn fb-notifications">
                     <span class="glyphicon glyphicon-comment"></span>
                     <span class="badge">1</span>
                   </button>
-                  <button type="button" class="btn btn-default navbar-btn">
+                  <button type="button" class="btn btn-default navbar-btn fb-notifications">
                     <span class="glyphicon glyphicon-globe"></span>
                     <span class="badge">3</span>
                   </button>
@@ -113,8 +113,7 @@
      <!-- The row that contains the three main columns of the website. -->
      <div class="row">
        <!-- Left sidebar: A cell that spans 2 columns -->
-       <!-- Left sidebar: A cell that spans 2 columns -->
-       <div class="col-md-2">
+       <div class="col-md-2 fb-left-sidebar">
          <ul class="nav nav-pills nav-stacked">
            <li role="presentation"><a href="#">John Vilk</a></li>
            <li role="presentation">
@@ -346,7 +345,7 @@
          </div>
        </div>
        <!-- Right sidebar: A cell that spans 3 columns -->
-       <div class="col-md-3">
+       <div class="col-md-3 fb-right-sidebar">
          <!-- Nested grid! Like the outer grid, it's just a sequence of rows. -->
          <!-- Ticker. -->
          <div class="row">
